@@ -2089,7 +2089,9 @@ namespace aux {
 					m_stat.received_tracker_bytes(len + 28);
 			}
 
-			if (m_alerts.should_post<udp_error_alert>())
+			// don't bubble up operation aborted errors to the user
+			if (e != asio::error::operation_aborted
+				&& m_alerts.should_post<udp_error_alert>())
 				m_alerts.post_alert(udp_error_alert(ep, e));
 			return;
 		}
